# permission-importer

./: package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts  styles.css
src-tauri/: .env  Cargo.toml  tauri.conf.json  version_control.sql
src-tauri/src/: main.rs
src-tauri/src/commands/: authorization_command.rs  control_command.rs  function_command.rs  group_command.rs  menu_command.rs  mod.rs  module_command.rs  organization_command.rs  role_command.rs  user_command.rs  version_control_command.rs
src-tauri/src/common/: mod.rs  serde_naive_datetime.rs  types.rs
src-tauri/src/models/: authorization.rs  authorization_record.rs  control.rs  function.rs  group.rs  menu.rs  mod.rs  module.rs  organization.rs  role.rs  system.rs  user.rs  version_control.rs
src/constants/: index.ts
src/router/: index.ts
src/types/: index.ts
src/utils/: index.ts
src/views/system-management/: index.vue
src/views/system-management/page-configuration/: index.vue
src/views/system-management/page-configuration/components/menu/: index.vue
src/views/system-management/page-configuration/model/: index.ts
src/views/system-management/page-configuration/permission/: index.ts
src/views/system-management/relation-permission/: index.vue
src/views/system-management/relation-permission/locale/: en-US.ts  zh-CN.ts
src/views/system-management/relation-permission/model/: index.ts
src/views/system-management/relation-permission/permission/: index.ts
src/views/version-list/: index.vue
src/views/version-list/model/: index.ts
(+25 files in other folders)
